--- a/battery-rul-estimation/experiments/unibo-powertools/lstm_rul_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/lstm_rul_unibo.ipynb
@@ -287,7 +287,7 @@
    "execution_count": null,
    "source": [
     "if IS_TRAINING:\n",
-    "    EXPERIMENT = \"lstm_rul_unibo_dataset\"\n",
+    "    EXPERIMENT = \"lstm_rul_unibo_powertools\"\n",
     "\n",
     "    experiment_name = time.strftime(\"%Y-%m-%d-%H-%M-%S\") + '_' + EXPERIMENT\n",
     "    print(experiment_name)\n",
